@@ -8,6 +8,7 @@ Version 0.5.0~dev
 	  from this class.
 	* Add _finalize method to worker API.
 	* Add ffprobe worker.
+	* Rename FFMpegWorker to FFmpegWorker.
 
 Version 0.4.0 Released on 2012/01/16
 
